# care_mcp_server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SCHEMA_ANALYSIS.md  USAGE.md  care_api_swagger_schema.json  pyproject.toml
config/: enhancements.yaml  whitelist.yaml
examples/: demo.py
scripts/: analyze_schema.py  verify.py
src/care_mcp_server/: __init__.py  __main__.py  auth.py  config.py  enhancements.py  schema_parser.py  tool_generator.py  whitelist.py
src/httpx/: __init__.py
src/mcp/: __init__.py
src/mcp/server/: __init__.py  fastmcp.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_enhancements.py  test_parser.py  test_real_schema.py  test_schema_parser.py  test_tools.py  test_whitelist.py
