[project]
name = "care-mcp-server"
version = "0.1.0"
description = "MCP Server for Care Healthcare API"
authors = [
    {name = "yash-learner", email = "yash@example.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
care-mcp-server = "care_mcp_server.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
